fixing spacing

--- a/assets/css/prompt.css
+++ b/assets/css/prompt.css
@@ -45,7 +45,10 @@ h1{
   border-radius:18px;
   box-shadow:0 20px 60px rgba(0,0,0,.35);
   padding:70px 20px 30px;
-  margin: 20px; 
+  margin: 20px;
+}
+.card + .card{
+  margin-top: 40px;
 }
 .header-row{
   position:absolute;
